# lightgan

./: README.md  pyproject.toml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  learning_rate_monitor.yaml  log_samples.yaml  lr_monitor.yaml  mnist.yaml  timer.yaml
configs/data/: default.yaml
configs/experiment/: cyclegan.yaml  test.yaml
configs/logger/: default.yaml  wandb.yaml
configs/model/: cut-infant.yaml  cut.yaml  cyclegan-infant.yaml  cyclegan.yaml  default.yaml  fastcut.yaml  gan.yaml  munit.yaml  sb.yaml  sincut.yaml  stylegan.yaml
configs/trainer/: default.yaml
src/: train.py
src/datasets/: __init__.py  cifar10_dataset.py  dataset_utils.py  mnist_dataset.py  rgb2ir_dataset.py  single_image_dataset.py  unaligned_dataset.py
src/models/: __init__.py  base_model.py  cut.py  cyclegan.py  dcgan.py  gan.py  munit.py  sb.py  sincut.py  stylegan.py
src/ops/: __init__.py  losses.py  module_utils.py  modules.py  ncsn_modules.py  stylegan_modules.py
src/utils/: __init__.py  callbacks.py
