[tool.poetry]
name = "lightgan"
version = "0.1.0"
description = ""
authors = ["unerue <unerue@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.0.1+cu117", source = "pytorch"}
torchvision = {version = "^0.15.2+cu117", source = "pytorch"}
lightning = "^2.0.8"
hydra-core = "^1.3.2"
rootutils = "^1.0.7"
packaging = "^23.1"
gputil = "^1.4.0"
wandb = "^0.15.11"
hydra-colorlog = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
ruff = "^0.0.291"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
